--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
       I have worked to understand the needs of customers in order to provide tangible
       solutions to solving their particular touchpoint. Thankfully,
       there were many overlaps of client service that carried over to user experience design. Earlier in 2017,
-      I stared turning my creative interest into seeking a new learning attainment at an immersive <a href="https://www.bloc.io">UX/UI
+      I started turning my creative interest into seeking a new learning attainment at an immersive <a href="https://www.bloc.io">UX/UI
       bootcamp, Bloc.</a> Through this mentor-led program, I have equipped myself with the necessary skills
-      to perform user research, strategize ,and deliver solutions from a human-centered thinking.</p>
+      to perform user research, strategize, and deliver solutions from a human-centered thinking.</p>
       <p>With a deep appreciation for how the human mind works, I enjoy asking what makes us tick
         and why we do things the way we do. I am fascinated by the way technologies are changing the world
-        and believe that clean and intuitive design are the hallmark to a company's success. What
-        excites me the most about user experience design is that it gives designer the opportunity
+        and believe that clean and intuitive design is the hallmark of a company's success. What
+        excites me the most about user experience design is that it gives the designer the opportunity
         to exercise their creative thinking to address everyday problems. As a junior designer, I am always
         looking for new approaches to enhance my process and craftsmanship. </p>
       <p> When I'm not designing, you can find me staying on top of my fitness, hiking, going to concerts, and
