--- a/equipax.html
+++ b/equipax.html
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="middle">
         <h4> WEB APPLICATION | BLOC PROJECT | CASE STUDY </h4>
-        <p> Equipax is an eccomerce web application for outdoor backpacks.
+        <p> Equipax is an eCommerce web application for outdoor backpacks.
         Users can select an outdoor activity and purchase premium backpacks
         based on their desired choices.  </p>
       </div>
@@ -72,7 +72,7 @@
       <div class="container">
         <h2> Problem Statement </h2>
         <h1> Shopping online isn't the same as in Store  </h1>
-        <p>Surely there are ecommerce sites that offer outdoor gears for the thrill-seekers.
+        <p>Surely there are eCommerce sites that offer outdoor gears for the thrill-seekers.
           Even with these shopping sites, their items focus on a general selection of apparels
           and gears - with backpacks specifically hidden in their many choices. Coupling with some of
           the unnecessary flows to purchasing an online product. </p>
@@ -102,7 +102,7 @@
     <h2> Discovery & Strategy Phase </h2>
     <h1> Getting Personal with my Users</h1>
     <p> To kick off my research, I surveyed many different types of users. From outdoor
-    enthusiasts to general shoppers, I wanted to find out about the following users habits and perspectives
+    enthusiasts to general shoppers, I wanted to find out about the users' habits and perspectives
   in the following areas: </p>
     <ul class="list">
         <li> How do users shop for backpacks?</li>
@@ -116,7 +116,7 @@
 
     <div class="middle">
       <h3> Interviewing my Users </h3>
-      <p> To supplement my research, I sat down with four different users to discuss about their
+      <p> To supplement my research, I sat down with four different users to discuss their
       shopping habits and what drives them to shop online. It was very important to dig deep
       in different angles as to what would provide a good shopping experience for potential users.</p>
     </div>
@@ -132,7 +132,7 @@
         <p> 1. Most users shop for backpacks mainly for its functionality. Although
         style and colors add to the appeal, it seems to be less important than price and the practicality of a product. </p>
         <p> 2. Users are very caution of online shopping due to its inconsistency between online and
-        in-store impression. Mirroring an in-store experience is very important for users to selecting the right product. </p>
+        in-store impression. Mirroring an in-store experience is very important for users in selecting the right product. </p>
         <p> 3. Often time, users are met with a wide selection of items. This can be overwhelming for shoppers,
         creating an uncertainty of purchasing an item with the right balance in price and quality. </p>
       </div>
@@ -146,7 +146,7 @@
     <p> Following the user survey and interviews, I used the feedback as the jumping
     off point to create user personas. I was able to
     craft and hone two relevant personas: bargain hunter - one who spends an exorbitant amount of time
-    looking for the best deals and power-shopper - one who are driven by a specific need and know exactly what they want.
+    looking for the best deals and power-shopper - one who is driven by a specific need and know exactly what they want.
     With the personas, I was able to bring more empathy to the early phases and eventually throughout the project.  </p>
     <div class="row">
       <div class="column">
@@ -170,8 +170,8 @@
 
     <div class="middle">
       <h3> Opportunities for Equipax </h3>
-      <p> 1. Majority of ecommerce outdoor gears site focuses on a holistic selection
-          of apparels, ranging from clothings to tents. This present an opportunity for
+      <p> 1. Majority of eCommerce outdoor gears site focuses on a holistic selection
+          of apparels, ranging from items of clothings to tents. This presents an opportunity for
           Equipax to shine in just solely selling outdoor backpacks. </p>
     </div>
 
@@ -185,7 +185,7 @@
     <h1> Maintaining a Minimum Viable Product </h1>
     <p> Using Google Sheets and Draw.io, I created both user stories and user flows based on
       my research to develop a minimum viable product. For both new and returning users,
-      being able to find a specific backpack and knowing where to complete a purchase are the
+      being able to find a specific backpack and knowing where to complete a purchase is the
       most critical to building Equipax. </p>
     <a href="images/equipax/flow.png"><img src="images/equipax/flow.png"></a>
   </div>
@@ -197,7 +197,7 @@
     <p> Keeping the research in mind, I used Sketch to produce medium-fidelity
     wireframes. After completing the wireframes, I presented the mockups to three potential users.
     I wanted to focus on making sure that the screen flow caters to my personas' needs.
-    Specifically I wanted to ensure that users can successfully scout for a backpack and
+    Specifically, I wanted to ensure that users can successfully scout for a backpack and
     purchase it through the end.  </p>
     <div class="middle">
       <h3> Low/Medium Fidelity Wireframes </h3>
@@ -225,7 +225,7 @@
     <p> To begin the branding process, I needed a name for the product. Going through
     several iterations of mind-mapping, I eventually landed on Equipax. "Equip" and "backpack"
     were synthesized to form Equipax, simply meaning to put on a backpack. To further the logo,
-    I vecterized the letter Q to resemble the two straps on a backpack and assigned it with the
+    I vectorized the letter Q to resemble the two straps on a backpack and assigned it to the
     brand's two primary colors.</p>
     <div class="middle">
       <h3> Logo Design </h3>
@@ -233,7 +233,7 @@
     </div>
 
     <p> When building the visual identity for Equipax, I wanted to convey an outdoor feel
-    while maintaining a clean ecommerence design. The maroon and green are used as the primary
+    while maintaining a clean eCommerce design. The maroon and green are used as the primary
     colors. The yellow color is used both as an accent to complement the main colors and as
     a call to action. The typeface - Avenir - is intended to emphasize a modern look with different
     angles of kerning and spacing for headings and paragraphs. </p>
@@ -251,7 +251,7 @@
     <h2> Prototyping Phase </h2>
     <h1> Showing the Real Elements </h1>
     <p> After going through several iterations, I transferred the low-fidelity mockups to
-      high-fidelity wireframes, using the style guide to help communciate the visual language and
+      high-fidelity wireframes, using the style guide to help communicate the visual language and
       convey the design direction. </p>
     <div class="middle">
       <h3> Features Annotation </h3>
@@ -290,10 +290,10 @@
   <div class="container">
     <h1> Reflections </h1>
     <p> 1. Designing Equipax turned out to be a project that I am passionate about while
-    going through the UX cycle. I develed deeper in the research process in this project, analyzing
-    how I can create an eccomerce site that fits to the users' shopping experience. </p>
+    going through the UX cycle. I went deeper in the research process in this project, analyzing
+    how I can create an eCcomerce site that fits the users' shopping experience. </p>
     <p> 2. As for future development, it would be a challenge to attach a philanthropic cause
-    to Equipax. People buy from those they can relate to and aspire to emulate so by establising a connection
+    to Equipax. People buy from those they can relate to and aspire to emulate so by establishing a connection
     with shoppers, they can experience the value of participating in a product. </p>
   </div>
 </section>
