--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -74,7 +74,7 @@
         <p> The net market exists several popular crowdfunding services such as GoFundme, Kickstarter, and Indiegogo.
           However, many of these web services either cater to holistic campaigns or specific ones such as creative projects.
           When users want to create a charity bike ride campaign, they would need to host their campaign through either the organization
-          they're funding for or a general crowd-sourced site. Unfortunately, there isn't a centralized crowd sourced site for
+          they're funding for or a general crowd-sourced site. Unfortunately, there isn't a centralized crowdsourced site for
           charity bike rides.  </p>
       </div>
   </section>
@@ -118,7 +118,7 @@
       <div class="middle">
         <h3> Interviewing my Users </h3>
         <p> In addition to sending out the survey, I held user interviews with both users who have
-        donated and fundraised. It was also important to target users who has been on charity bike rides to gain
+        donated and fundraised. It was also important to target users who have been on charity bike rides to gain
         a deeper understanding of the pain points when creating a bike campaign.</p>
       </div>
         <blockquote> I rather donate to people or organizations that I can connect personally with  </blockquote>
@@ -128,11 +128,11 @@
 
         <div class="middle">
           <h3> Research Insights </h3>
-          <p> 1. Often time, users are hesistant to donate online due to not knowing where their
+          <p> 1. Often time, users are hesitant to donate online due to not knowing where their
           money is going to. I sought to answer how might we create trust and transparency to debunk
           hesitation and build a rapport with the users.</p>
           <p> 2. From a fundraiser's perspective, the biggest pain point was marketing and how to
-          incentivize users outside from the riders' mutual circle to donate to a campaign. </p>
+          incentivize users outside of the riders' mutual circle to donate to a campaign. </p>
         </div>
 
     </div>
@@ -144,7 +144,7 @@
       <p> Following the user survey and interviews, I used the feedback as the jumping
       off point to create user personas. I was able to
       craft and hone two relevant personas: bargain hunter - one who spends an exorbitant amount of time
-      looking for the best deals and power-shopper - one who are driven by a specific need and know exactly what they want.
+      looking for the best deals and power-shopper - one who is driven by a specific need and know exactly what they want.
       With the personas, I was able to bring more empathy to the early phases and eventually throughout the project.  </p>
       <div class="row">
         <div class="column3">
@@ -174,7 +174,7 @@
 
       <div class="middle">
         <h3> User Flow </h3>
-        <p> Using the user stories as a guide to to deliver an effectve user flow, I focused on the
+        <p> Using the user stories as a guide to deliver an effective user flow, I focused on the
         development of both donors and fundraisers alike.  </p>
         <a href="images/ridestarter/user_flow.png"><img src="images/ridestarter/user_flow.png"></a>
       </div>
@@ -184,9 +184,9 @@
 
   <section class="low-fidelity">
     <div class="container">
-      <h1> Developing the Intial Screens</h1>
+      <h1> Developing the Initial Screens</h1>
       <p> In order to show potential users how the application is supposed to function and be built,
-         I designed the low-fidelity wireframes in Balsamiq based from the user stories. It was also important
+         I designed the low-fidelity wireframes in Balsamiq based on the user stories. It was also important
        to remember to design from both the donators and fundraisers' experience. Given that mind, I created
        wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
       <div class="middle">
@@ -201,7 +201,7 @@
       <h2> Visual Identity Phase </h2>
       <h1> Cycling through the Brand Identity </h1>
       <p> With Ridestarter being a crowdfunding application, eliciting trust and emotion are the
-        most important facet in getting users to use the site. The color palette was comprised mainly of the color green. Green was used as the primary color for
+        most important facet of getting users to use the site. The color palette was comprised mainly of the color green. Green was used as the primary color for
         Ridestarter because not only green conveys with money and funds, but also promotes
         an association for nature and foliages, which are all presented during a rider's journey.</p>
       <a href="images/ridestarter/ridestarter_branding.png"><img src="images/ridestarter/ridestarter_branding.png"></a>
@@ -216,7 +216,7 @@
         I began on the construction of the high-fidelity wireframes. </p>
       <div class="middle">
         <h3> Charity Page View </h3>
-        <p>The main charity page follows a minimum viable product based from the
+        <p>The main charity page follows a minimum viable product based on the
           user research. Essential elements are displayed to ease the users in interacting with a bike charity page. </p>
         <a href="images/ridestarter/test.png"><img src="images/ridestarter/test.png"></a>
 
@@ -241,15 +241,15 @@
       <h2> Usability Phase </h2>
 
       <h1> Building Trust through Transparency </h1>
-      <p> Disclosing reputation and personal information were important
+      <p> Disclosing reputation and personal information was important
         for potential donors to empathize with the fundraisers and make a donation. However, I knew I was struggling with users intuitively navigating to the
         fundraiser's profile page. </p>
       <a href="images/ridestarter/click.png"><img src="images/ridestarter/click.png"></a>
 
       <div class="middle">
         <h3> Click Test Result </h3>
-        <p> By gathering more than 50 click test responses, my assumption was wrong as majority of testers successfully
-          clicked on the correct element (creator's image), despite a few outliers. However, I wanted to further emphasize on the fundraiser's reputation.
+        <p> By gathering more than 50 click test responses, my assumption was wrong as a majority of testers successfully
+          clicked on the correct element (creator's image), despite a few outliers. However, I wanted to further emphasize the fundraiser's reputation.
           So I added another profile link avenue by creating a small button under the fundraiser's name to view their profile. </p>
       </div>
 
