--- a/gymseeker.html
+++ b/gymseeker.html
@@ -60,9 +60,9 @@
     <div class="container">
       <div class="middle">
         <h4> MOBILE APPLICATION | BLOC PROJECT | CASE STUDY </h4>
-        <p> Today, defining and maintaining fitness is open to intrepretation. Whether that
+        <p> Today, defining and maintaining fitness is open to interpretation. Whether that
         be health, sports, or recreational activity, Gymseeker seeks to assist users in finding
-      the perfect gym to acheiving their fitness goals.  </p>
+      the perfect gym to achieving their fitness goals.  </p>
       </div>
     </div>
   </section>
@@ -74,7 +74,7 @@
         <p>Finding the right gym is different for everyone. Whether that is location, price or types of
         services offered, users must go through a rigorous research process before making a
         commitment. Applications such as Yelp does aid in the process of locating a gym, but it isn't
-        comprehensive enough to cover the entirety of a gym's profile. Additionally, when expecations aren't met,
+        comprehensive enough to cover the entirety of a gym's profile. Additionally, when expectations aren't met,
         users are not satisfied with their gym and may potentially neglect their fitness goals. </p>
       </div>
   </section>
@@ -84,7 +84,7 @@
       <h2> Solution Overview</h2>
       <h1> Achieving Fitness Goals at the Right Gym</h1>
       <p> Gymseeker makes the process of finding a gym easier by streamlining the research
-      and selection phase based on the users' needs. Users can search for gyms basd on location and
+      and selection phase based on the users' needs. Users can search for gyms based on location and
     view gym's profile before making a commitment to purchasing a membership, easing users in the decision-making process. </p>
     <div class="middle">
       <iframe width="438" height="930" class="frame" src="https://invis.io/GKENK9AQX" frameborder="0" allowfullscreen></iframe>
@@ -110,7 +110,7 @@
       <img src="images/gymseeker/research.png">
       <div class="middle">
         <h3> Interviewing my Users </h3>
-        <p> Following the user survery, I held interviews with four different users to gather qualitative
+        <p> Following the user survey, I held interviews with four different users to gather qualitative
           insights on their gym behavior. </p>
       </div>
         <blockquote> Sometimes I have too much work to do so I get lazy to hit the gym </blockquote>
@@ -121,13 +121,13 @@
         <div class="middle">
           <h3> Research Insights </h3>
           <p> 1. Buying a gym membership can be stressful for most users. With all the different factors
-          presented (e.g community, overcrowding, lack of certain equipments), it is important that Gymseeker eases users
-          in simplifying decision-making when choosing a gym. </p>
-          <p> 2. People wants to meet their fitness goals, but find it hard to do so when they are met
+          presented (e.g community, overcrowding, lack of certain types of equipments), it is important that Gymseeker eases users
+          into simplifying decision-making when choosing a gym. </p>
+          <p> 2. People want to meet their fitness goals, but find it hard to do so when they are met
           with pain points like being too tired from work or the gym is too far to make the trip. They would
           make more of the effort if their external inhibitors aren't deterring them. </p>
           <p> 3. I learned that users tend to associate gyms with the weight room. Based
-          off this insight, I want to ensure that a gym profile on screen contain weight-related elements. </p>
+          on this insight, I want to ensure that a gym profile on screen contains weight-related elements. </p>
 
         </div>
     </div>
@@ -138,7 +138,7 @@
       <h1> Who are my Audiences </h1>
       <p> To gain a better understanding of what specific features were desired and
       what kind of people are likely to user Gymseeker, I compiled my research to create
-    three different user personas: Avid gym-goer, occasional gym-goer and amateur gym-goer.
+    three different user personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer.
     These personas will guide me to design an intuitive flow for Gymseeker.  </p>
       <div class="row">
         <div class="column3">
@@ -166,8 +166,8 @@
       <a href="images/equipax/flow.png"><img src="images/gymseeker/sitemap.png"></a>
       <div class="middle">
         <h3> User Flow </h3>
-        <p> Using the personas as a guide, I began on the development of the user flow. Using the
-        user stories I created, I was able craft four essential flows for Gymseeker. </p>
+        <p> Using the personas as a guide, I began the development of the user flow. Using the
+        user stories I created, I was able to craft four essential flows for Gymseeker. </p>
         <a href="images/equipax/flow.png"><img src="images/gymseeker/user_flow.png"></a>
       </div>
     </div>
@@ -178,7 +178,7 @@
       <h1> Constructing the Early Screens</h1>
       <p> With the completed user stories and user flows, I created low-fidelity wireframes with
       Balsamiq and then transferred it to clickable prototypes using Invision for user testing. I made
-      sure to test the intial screens with my peers and target users and convening all the insights
+      sure to test the initial screens with my peers and target users and convening all the insights
       into the next iteration of designs. </p>
       <div class="middle">
         <h3> Low/Medium Fidelity Wireframes </h3>
@@ -213,7 +213,7 @@
       <h2> Prototyping Phase </h2>
       <h1> Be Inspired to Achieve Fitness Goals</h1>
       <p> After going through several iterations of the low-fidelity wireframes,
-      I began to built out the high-fidelity wireframes. Using the style guide as a reference,
+      I began to build out the high-fidelity wireframes. Using the style guide as a reference,
       By making sure to maintain Gymseeker's core value of encouraging users to achieve their fitness goals,
       I was able to clearly communicate the visual identity through the mobile screens.   </p>
       <div class="middle">
@@ -227,15 +227,15 @@
     <div class="container">
       <h2> Usability Phase </h2>
       <h1> Iterating the Button Sizes </h1>
-      <p> When users were tasked with finding a gym, I noticed that users tend to stay in the map view and
+      <p> When users were tasked with finding a gym, I noticed that users tend to stay on the map view and
       didn't notice the list view unless otherwise hinted. In addition, designing mobile applications require
-      for buttons to be bigger due to users' thumb size. By making the accessibility for both views larger,
+      buttons to be bigger due to users' thumb size. By making the accessibility for both views larger,
       users can easily see and navigate from one view to the other.</p>
 
       <a href="images/gymseeker/map.png"><img src="images/gymseeker/map.png"></a>
       <h1> Designing the List View </h1>
       <p> When presented with the list view, users mentioned that they had trouble reading some of the contents.
-      To accomodate this pain point, I increased readability by increasing the fonts universally and applying
+      To accommodate this pain point, I increased readability by increasing the fonts universally and applying
       a darker visual element to the list view. Showing this screen again, users were impressed with
       the visual hierarchy of the screen. </p>
       <a href="images/gymseeker/list.png"><img src="images/gymseeker/list.png"></a>
@@ -248,13 +248,13 @@
       <h1> Reflections </h1>
       <p> 1. Gymseeker is a project that I am particularly passionate about.
         As a fitness enthusiast who frequents the weight room, I have only considered
-        locating gyms based on what types of equipments a gym has in their
+        locating gyms based on what types of equipment a gym has in their
         weight room. With Gymseeker, users are presented with a holistic detail of a gym's profile before
         making a commitment to purchasing a membership.  </p>
 
-      <p> 2. For this iOS application, I delved deep in the user testing process and have made many iterations based on
+      <p> 2. For this iOS application, I delved deep into the user testing process and have made many iterations based on
         feedback. In future development of the current product and due to time constraints, I would consider an additional feature that allows users to
-      sort through the different types of gym - Yoga center, dance center, athlethic clubs, etc. This would provide users with a
+      sort through the different types of a gym - Yoga center, dance center, athletic clubs, etc. This would provide users with a
       comprehensive direction to filter through their fitness goals. </p>
     </div>
   </section>
