--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1> EKKA<span class="lux">LUX</span> NGUYEN <span style="color:#C2C2C2">&</span> I'M A DESIGNER</h1>
     <p> I am an enthusiastic UX Designer based in San Francisco who specializes in crafting web and mobile applications
        through an end-to-end human-centric process. I enjoy creating effortless user experience
-       and designing clean and modern products. I am currently an Operation Specialists at <a href="https://squareup.com/" target="_blank">Square</a>,
+       and designing clean and modern products. I am currently an Operations Specialist at <a href="https://squareup.com/" target="_blank">Square</a>,
        seeking to transition into a full-time opportunity in Product Design.
        Read more about me <a href="about.html">here</a> or check out my recent projects right below. </p>
     <p class="scroll"> SCROLL FOR MORE</p>
