--- a/equipax.html
+++ b/equipax.html
@@ -74,8 +74,8 @@
         <h1> Shopping online isn't the same as in Store  </h1>
         <p>Surely there are eCommerce sites that offer outdoor gears for the thrill-seekers.
           Even with these shopping sites, their items focus on a general selection of apparels
-          and gears - with backpacks specifically hidden in their many choices. Coupling with some of
-          the unnecessary flows to purchasing an online product. </p>
+          and equipments - with backpacks hidden explicitly in their many choices. Coupling with some of
+          the additional flows to purchasing an online product. </p>
       </div>
   </section>
 
@@ -84,7 +84,7 @@
       <h2> Solution Overview </h2>
       <h1> Replicating similar Shopping experiences  </h1>
       <p> Equipax aims to provide users with a seamless shopping experience when they are making
-      their backpack purchases. Users are provided with an all traditional element of an eccomerce
+      their backpack purchases. Users are provided with an all traditional element of an eCommerce
       site with a curtail focus on outdoor backpacks. Users can easily compare items and contact
       live support agents should they have questions. The solution overall aims to mirror an
       in-store experience for backpack enthusiasts, designed to establish a connection with shoppers. </p>
@@ -117,8 +117,8 @@
     <div class="middle">
       <h3> Interviewing my Users </h3>
       <p> To supplement my research, I sat down with four different users to discuss their
-      shopping habits and what drives them to shop online. It was very important to dig deep
-      in different angles as to what would provide a good shopping experience for potential users.</p>
+      shopping habits and what drives them to shop online. It was critical to dig deep
+      in different angles as to what would provide a pleasant shopping experience for potential users.</p>
     </div>
       <blockquote> I use wikibuy to match prices for a product around the internet. Helps me find
         better deals and save money </blockquote>
@@ -134,7 +134,7 @@
         <p> 2. Users are very caution of online shopping due to its inconsistency between online and
         in-store impression. Mirroring an in-store experience is very important for users in selecting the right product. </p>
         <p> 3. Often time, users are met with a wide selection of items. This can be overwhelming for shoppers,
-        creating an uncertainty of purchasing an item with the right balance in price and quality. </p>
+        creating uncertainty of purchasing an article with the right balance in price and quality. </p>
       </div>
 
   </div>
@@ -171,7 +171,7 @@
     <div class="middle">
       <h3> Opportunities for Equipax </h3>
       <p> 1. Majority of eCommerce outdoor gears site focuses on a holistic selection
-          of apparels, ranging from items of clothings to tents. This presents an opportunity for
+          of apparels, ranging from items of clothing to tents. This presents an opportunity for
           Equipax to shine in just solely selling outdoor backpacks. </p>
     </div>
 
@@ -224,17 +224,18 @@
     <h1> Evoking Outdoorsman through Branding </h1>
     <p> To begin the branding process, I needed a name for the product. Going through
     several iterations of mind-mapping, I eventually landed on Equipax. "Equip" and "backpack"
-    were synthesized to form Equipax, simply meaning to put on a backpack. To further the logo,
-    I vectorized the letter Q to resemble the two straps on a backpack and assigned it to the
+    were synthesized to form Equipax, merely meaning to put on a backpack. To further the logo,
+    I vectorized the letter Q to resemble the two straps on a bag and assigned it to the
     brand's two primary colors.</p>
     <div class="middle">
       <h3> Logo Design </h3>
+      <img src="images/equipax/sketch.jpg">
       <img src="images/equipax/logo.png">
     </div>
 
     <p> When building the visual identity for Equipax, I wanted to convey an outdoor feel
     while maintaining a clean eCommerce design. The maroon and green are used as the primary
-    colors. The yellow color is used both as an accent to complement the main colors and as
+    colors. The yellow color is used both as an accent to complement the primary colors and as
     a call to action. The typeface - Avenir - is intended to emphasize a modern look with different
     angles of kerning and spacing for headings and paragraphs. </p>
 
@@ -275,10 +276,10 @@
       the test, users had no trouble finding the live chat button. </p>
     <a href="images/equipax/clicktest.png"><img src="images/equipax/clicktest.png"></a>
     <h1> Additional User Testing </h1>
-    <p> 1. Testers were met with positive interaction with Equipax. Users can clearly
+    <p> 1. Testers had a positive interaction with Equipax. Users can
     identify the navigation flow from the start of finding a backpack to completing
     a successful purchase. </p>
-    <p> 2. Consistency is also very important when going through the purchasing screens of an item
+    <p> 2. Consistency is also essential when going through the purchasing screens of an item
     where a lot of information are presented. A second promo code registration option was added
     to the Shipping/Payment page when users hinted that they couldn't add a promo code unless having to
     go back to the cart page.</p>
@@ -290,7 +291,7 @@
   <div class="container">
     <h1> Reflections </h1>
     <p> 1. Designing Equipax turned out to be a project that I am passionate about while
-    going through the UX cycle. I went deeper in the research process in this project, analyzing
+    going through the UX cycle. I went more rooted in the research process in this project, analyzing
     how I can create an eCcomerce site that fits the users' shopping experience. </p>
     <p> 2. As for future development, it would be a challenge to attach a philanthropic cause
     to Equipax. People buy from those they can relate to and aspire to emulate so by establishing a connection
