--- a/gymseeker.html
+++ b/gymseeker.html
@@ -72,8 +72,8 @@
         <h2> Problem Statement</h2>
         <h1> There are too many gyms to choose from </h1>
         <p>Finding the right gym is different for everyone. Whether that is location, price or types of
-        services offered, users must go through a rigorous research process before making a
-        commitment. Applications such as Yelp does aid in the process of locating a gym, but it isn't
+        services offered, users must go through a rigorous research process before
+        committing. Applications such as Yelp does aid in the process of locating a gym, but it isn't
         comprehensive enough to cover the entirety of a gym's profile. Additionally, when expectations aren't met,
         users are not satisfied with their gym and may potentially neglect their fitness goals. </p>
       </div>
@@ -96,13 +96,13 @@
     <div class="container">
       <h2> Discovery & Strategy Phase </h2>
       <h1> Getting to know my Users </h1>
-      <p> I initiated my research by crafting a 15 questions user survey in order to
+      <p> I initiated my research by crafting a 15 questions user survey to
       find out users' goals and pain points. By targeting audiences from all experiences with
       gym-related components, I gathered more than 40 comprehensive responses. From this survey, I needed to learn the
       following: </p>
       <ul class="list">
           <li> User's fitness goals </li>
-          <li> What factor is important in selecting a gym </li>
+          <li> What factor is essential in selecting a gym </li>
           <li> What frustrations do users have with their current gym </li>
           <li> What stops users from going to the gym  </li>
           <li> What type of membership do they currently have </li>
@@ -121,10 +121,10 @@
         <div class="middle">
           <h3> Research Insights </h3>
           <p> 1. Buying a gym membership can be stressful for most users. With all the different factors
-          presented (e.g community, overcrowding, lack of certain types of equipments), it is important that Gymseeker eases users
+          presented (e.g community, overcrowding, lack of certain types of equipments), it is vital that Gymseeker eases users
           into simplifying decision-making when choosing a gym. </p>
           <p> 2. People want to meet their fitness goals, but find it hard to do so when they are met
-          with pain points like being too tired from work or the gym is too far to make the trip. They would
+          with pain points like being too tired from work or the gym is too far to make the trip. They will
           make more of the effort if their external inhibitors aren't deterring them. </p>
           <p> 3. I learned that users tend to associate gyms with the weight room. Based
           on this insight, I want to ensure that a gym profile on screen contains weight-related elements. </p>
@@ -191,7 +191,7 @@
         straight to the point. A few minor tweaks include  </p>
         <p>2. One of the testers wanted to view the weekly schedule, but the early screens
         show only the hours on the day of. Consequentially, I created a new call to action to
-        view the schedule of the gym hours. </p>
+        see the schedule of the gym hours. </p>
       </div>
     </div>
   </section>
@@ -202,7 +202,7 @@
       <h1> Understanding Gymseeker's Value, Then Build the Brand  </h1>
       <p> To build the product's brand, I was able to conclude an. Gymseeker needed
         a style that would evoke the feeling of energy and motivation. Yellow and orange
-        came first to mind, but I decided on the color blue to represent the feeling
+        came first to mind, but I decided on the color blue to represent the sense
         of prowess and strength. </p>
         <a href="images/gymseeker/brand.png"><img src="images/gymseeker/brand.png"></a>
     </div>
@@ -215,7 +215,7 @@
       <p> After going through several iterations of the low-fidelity wireframes,
       I began to build out the high-fidelity wireframes. Using the style guide as a reference,
       By making sure to maintain Gymseeker's core value of encouraging users to achieve their fitness goals,
-      I was able to clearly communicate the visual identity through the mobile screens.   </p>
+      I was able to communicate the visual identity through the mobile screens.   </p>
       <div class="middle">
         <a href="images/gymseeker/visual.png"><img src="images/gymseeker/visual.png"></a>
       </div>
@@ -228,9 +228,9 @@
       <h2> Usability Phase </h2>
       <h1> Iterating the Button Sizes </h1>
       <p> When users were tasked with finding a gym, I noticed that users tend to stay on the map view and
-      didn't notice the list view unless otherwise hinted. In addition, designing mobile applications require
-      buttons to be bigger due to users' thumb size. By making the accessibility for both views larger,
-      users can easily see and navigate from one view to the other.</p>
+      didn't see the list view unless otherwise hinted. Besides, designing mobile applications require
+      buttons to be more prominent due to users' thumb size. By making the accessibility for both views larger,
+      users can easily see and navigate from one perspective to the other.</p>
 
       <a href="images/gymseeker/map.png"><img src="images/gymseeker/map.png"></a>
       <h1> Designing the List View </h1>
@@ -250,7 +250,7 @@
         As a fitness enthusiast who frequents the weight room, I have only considered
         locating gyms based on what types of equipment a gym has in their
         weight room. With Gymseeker, users are presented with a holistic detail of a gym's profile before
-        making a commitment to purchasing a membership.  </p>
+        committing to purchasing a membership.  </p>
 
       <p> 2. For this iOS application, I delved deep into the user testing process and have made many iterations based on
         feedback. In future development of the current product and due to time constraints, I would consider an additional feature that allows users to
