--- a/ridestarter2.html
+++ b/ridestarter2.html
@@ -62,7 +62,7 @@
         <h4> WEB APPLICATION | BLOC PROJECT | CASE STUDY </h4>
         <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
           either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
-          campaign, supporting specific causes of their choosing or browse and donate through the different active bike campaigns</p>
+          campaign, supporting specific causes of their choosing or browse and donate through the different active bike campaigns.</p>
       </div>
     </div>
   </section>
@@ -84,7 +84,7 @@
       <h2> Solution Overview</h2>
       <h1> A Trusted Crowdfunding Medium </h1>
       <p> Ridestarter seeks to consolidate charity bike rides and allow users to crowd-sourced
-        for ride projects in one central location. The goal for Ridestarter is to allow donors and fundraisers to come
+        for ride projects in one central location. The goal for Ridestarter is to enable donors and fundraisers to come
         together in supporting charity rides for causes they care about. Donors can browse and donate to a specific
         cause of their choosing while fundraisers can effortlessly build bike projects through an intuitive creation flow.   </p>
 
@@ -101,7 +101,7 @@
     <div class="container">
       <h2> Discovery & Strategy Phase </h2>
       <h1> Getting to know my Users </h1>
-      <p> At this initial stage, it was important to gain a better understanding of users' behavior of
+      <p> At this initial stage, it was crucial to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
       who have made donations, created fundraiser projects, participated in charity bike ride and also users
       who have neither fundraised or donated.</p>
@@ -144,7 +144,7 @@
       <p> Following the user survey and interviews, I used the feedback as the jumping
       off point to create user personas. I was able to
       craft and hone two relevant personas: bargain hunter - one who spends an exorbitant amount of time
-      looking for the best deals and power-shopper - one who is driven by a specific need and know exactly what they want.
+      looking for the best deals and power-shopper - one who is driven by a specific need and know specifically what they want.
       With the personas, I was able to bring more empathy to the early phases and eventually throughout the project.  </p>
       <div class="row">
         <div class="column3">
@@ -174,7 +174,7 @@
 
       <div class="middle">
         <h3> User Flow </h3>
-        <p> Using the user stories as a guide to deliver an effective user flow, I focused on the
+        <p> Using the user stories as a guide to deliver a sufficient user flow, I focused on the
         development of both donors and fundraisers alike.  </p>
         <a href="images/ridestarter/user_flow.png"><img src="images/ridestarter/user_flow.png"></a>
       </div>
@@ -185,10 +185,10 @@
   <section class="low-fidelity">
     <div class="container">
       <h1> Developing the Initial Screens</h1>
-      <p> In order to show potential users how the application is supposed to function and be built,
-         I designed the low-fidelity wireframes in Balsamiq based on the user stories. It was also important
-       to remember to design from both the donators and fundraisers' experience. Given that mind, I created
-       wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
+      <p> To show potential users how the application is supposed to function and be built,
+         I designed the low-fidelity wireframes in Balsamiq based on the user stories. It was also essential
+       to remember to develop from both the donators and fundraisers' experience. Given that mind, I created
+       wireframes from the fundraiser's perspective where they can manage and edit their projects. </p>
       <div class="middle">
         <h3> Low/Medium Fidelity Wireframes </h3>
         <a href="images/ridestarter/low.jpg"><img src="images/ridestarter/low.jpg"></a>
@@ -226,8 +226,8 @@
         <a href="images/ridestarter/discover.png"><img src="images/ridestarter/discover.png"></a>
 
         <h3> Conveying Reputation</h3>
-        <p> Based on the user research, one of the main factors in users not
-          committing to a donation is being unsure of the fundraiser's trustworthiness. Donors must feel safe donating to creators so
+        <p> Based on the user research, one of the leading factors in users not
+          committing to a donation is being unsure of the fundraiser's trustworthiness. Donors must feel safe donating to creators, so
           it's important to also focus on the project owner's credibility.</p>
         <a href="images/ridestarter/reputation.png"><img src="images/ridestarter/reputation.png"></a>
 
@@ -249,7 +249,7 @@
       <div class="middle">
         <h3> Click Test Result </h3>
         <p> By gathering more than 50 click test responses, my assumption was wrong as a majority of testers successfully
-          clicked on the correct element (creator's image), despite a few outliers. However, I wanted to further emphasize the fundraiser's reputation.
+          clicked on the correct element (creator's image), despite a few outliers. However, I wanted to emphasize the fundraiser's reputation further.
           So I added another profile link avenue by creating a small button under the fundraiser's name to view their profile. </p>
       </div>
 
@@ -259,16 +259,16 @@
   <section class="reflection">
     <div class="container">
       <h1> Reflections </h1>
-      <p>Ridestarter has a value in allowing users to exclusively search and donate to charity bike rides,
+      <p>1. Ridestarter has a value in allowing users to exclusively search and donate to charity bike rides,
         solving the problem of transparency in crowd-sourcing charity projects. Building an application with the goal to get people to not only get excited
-        to donate money, but also build trust and transparency in the platform requires thoughtful decisions in the design process.
-        What’s difficult, but significant was coming up with the right questions to ask in the user survey in order
+        to donate money, but also create trust and openness in the platform requires thoughtful decisions in the design process.
+        What’s difficult, but significant was coming up with the right questions to ask in the user survey
         to uncover underlying goals and motives. The interview process was a humbling experience in learning more
          about the different perspective from both the donators and fundraisers. Asking questions and
          empathizing to explore deeper into the users’ mind was an experience that allowed me to reflect
          on what is considered a good user interview process.  </p>
 
-         <p>An area for improvement with Ridestarter would be to research more on what to include in a charity ride crowdfunding platform -
+         <p>2. An area for improvement with Ridestarter would be to research more on what to include in a charity ride crowdfunding platform -
            what is needed to either get people interested in riding or donating to ride projects. The good news is that an application
            is never a final product as design and iteration is an ongoing process. I hope to further improve on the aesthetic and
            functionality of Ridestarter to create a good crowdfunding user experience. </p>
